--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>TENNIS CD9 2026</title>
+    <title>TENNIS ĐỊNH MỆNH CD9 2026</title>
     <style>
         :root {
             --primary: #1b5e20;
@@ -71,7 +71,7 @@
 </head>
 <body>
 
-<header>TENNIS CD9 2026</header>
+<header>TENNIS ĐỊNH MỆNH CD9 2026</header>
 
 <div class="container">
     <section><div class="section-title">🏆 Bảng Xếp Hạng</div><div id="BXH" class="table-wrapper"></div></section>
